src/styles/Crossword.css
.crossword {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px 20px 0; /* Removed bottom padding */
}

.crossword-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-start; /* Align items to the top */
  gap: 20px;
  margin-bottom: 10px; /* Reduced from 20px */
  max-width: 1000px; /* Adjust this value as needed */
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 768px) {
  .crossword-container {
    flex-direction: column;
    align-items: center;
  }
}

.check-answers-btn {
  padding: 8px 16px; /* Ensure consistent padding */
  font-size: 14px; /* Ensure consistent font size */
  background-color: #4CAF50;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s;
  margin-top: 10px; /* Added margin-top */
  margin-right: 10px; /* Add space between buttons */
}

.check-answers-btn:hover {
  background-color: #45a049;
}

.crossword-header {
  display: flex;
  justify-content: flex-end; /* Align buttons to the right */
  width: 100%; /* Ensure it takes full width */
  margin-bottom: 10px; /* Space below the header */
}

.difficulty-toggle {
  padding: 8px 16px; /* Ensure consistent padding */
  font-size: 14px; /* Ensure consistent font size */
  background-color: #4CAF50;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s;
}

.difficulty-toggle:hover {
  background-color: #45a049;
}

